--- a/oscar2 - monitoring server/vagrant/Vagrantfile
+++ b/oscar2 - monitoring server/vagrant/Vagrantfile
@@ -1,7 +1,7 @@
 
 Vagrant.configure("2") do |config|
 
-  config.vm.box = "kensykora/windows_2012_r2_standard"
+  config.vm.box = "mwrock/Windows2012R2"
   config.vm.guest = :windows
   config.vm.provider "hyperv"
   #config.vm.communicator = "winrm" ?
@@ -10,7 +10,6 @@ Vagrant.configure("2") do |config|
   #Disable automatic box update checking (not recommended)
   config.vm.box_check_update = false
 
-  config.vm.provision :shell, path: " "
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -20,7 +19,7 @@ Vagrant.configure("2") do |config|
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine. In the example below,
   # accessing "localhost:8080" will access port 80 on the guest machine.
-   config.vm.network "forwarded_port", guest: 80, host: 8080, id:"iis-defaultsite"
+   config.vm.network "forwarded_port", guest: 80, host: 1234, id:"iis-defaultsite"
 
    config.vm.network "private_network", ip: "192.168.33.10"
 
